name:               cyprio
version:            0.2.0.0
build-type:         Simple
cabal-version:      >= 1.24

executable site
  main-is:          site.hs
  build-depends:    base >= 4.9
                  , process >= 1.4
                  , hakyll >= 4.9
                  , containers
  ghc-options:      -threaded
  default-language: Haskell2010
